tests/models/enum/named/i64/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value {
        #[field(validate = validate_fn)]
        value: i64
    },
}
fn main() {}
